--- a/portfolio/templates/portfolio/customer_list.html
+++ b/portfolio/templates/portfolio/customer_list.html
@@ -53,8 +53,9 @@
                            class="btn btn-danger">Delete</a>
                     <td><a href="{% url 'portfolio:portfolio' pk=customer.pk %}"
                            class="btn btn-primary">Portfolio</a>
-                    <td><a href="{% url 'portfolio:portfolio_summary_pdf' pk=customer.pk %}"
+                    <!--<td><a href="{% url 'portfolio:portfolio_summary_pdf' pk=customer.pk %}"
                            class="btn btn-primary">Download Portfolio PDF Report</a>
+                    <td><a href="{% url 'portfolio:portfolio_summary_pdf_email' pk=customer.pk %}" type="button" class="btn btn-primary">Send PDF to Email</a>-->
 
                     </td>
 
