--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -155,6 +155,10 @@
                             </tbody>
                         </table>
                     </div>
+            <div>
+                <a href="{% url 'portfolio:portfolio_summary_pdf' pk=customer.pk %}" class="btn btn-primary">Download PDF</a>
+                <a href="{% url 'portfolio:portfolio_summary_pdf_email' pk=customer.pk %}" class="btn btn-primary">Send PDF to Email</a>
+            </div>
             </body>
     </html>
 {% endblock %}
