--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -156,8 +156,8 @@
                         </table>
                     </div>
             <div>
-                <a href="{% url 'portfolio:portfolio_summary_pdf' pk=customer.pk %}" class="btn btn-primary">Download PDF</a>
-                <a href="{% url 'portfolio:portfolio_summary_pdf_email' pk=customer.pk %}" class="btn btn-primary">Send PDF to Email</a>
+                <!--<a href="{% url 'portfolio:portfolio_summary_pdf' pk=customer.pk %}" class="btn btn-primary">Download PDF</a>
+                <a href="{% url 'portfolio:portfolio_summary_pdf_email' pk=customer.pk %}" class="btn btn-primary">Send PDF to Email</a>-->
             </div>
             </body>
     </html>
