Mobile responsive changes

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -34,6 +34,66 @@
             padding: 15px;
         }
 
+        @media screen and (max-width: 480px) {
+        table,
+        tbody {
+            display: block;
+            width: 100%;
+        }
+        thead { display: none; }
+        table tr,
+        table th,
+        table td {
+            display: block;
+            padding: 0;
+            text-align: left;
+            white-space: normal;
+        }
+        table tr {
+        border-bottom: 1px solid #eee;
+        padding-bottom: 11px;
+        margin-bottom: 11px;
+        }
+
+        table th[data-title]:before,
+        table td[data-title]:before {
+        content: attr(data-title) ":\00A0";
+        font-weight: bold;
+        }
+
+        table td {
+        border: none;
+        margin-bottom: 6px;
+        color: #444;
+        }
+
+        table td:empty { display: none; }
+
+        table td:first-child {
+        font-size: 14px;
+        font-weight: bold;
+        margin-bottom: 6px;
+        color: #333;
+        }
+        table td:first-child:before { content: ''; }
+
+
+
+        .sidebar {
+            width: 100%;
+            height: auto;
+            position: relative;
+        }
+
+        .sidebar a {
+            float: left;
+        }
+
+        div.content {
+            margin-left: 0;
+        }
+    }
+
         /* On small screens, set height to 'auto' for sidenav and grid */
         @media screen and (max-width: 767px) {
             .sidenav {
