--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -43,9 +43,9 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <td>{{sum_of_initial_stock_value|add:sum_acquired_value.acquired_value__sum|intcomma}}
-                                <td>{{sum_current_stocks_value|add:sum_recent_value.recent_value__sum|intcomma}}
-                                 <td>{{sum_current_stocks_value|sub:sum_of_initial_stock_value|add:sum_recent_value.recent_value__sum|sub:sum_acquired_value.acquired_value__sum|intcomma}}
+                                <td data-title="Portfolio Initial Investments">{{sum_of_initial_stock_value|add:sum_acquired_value.acquired_value__sum|intcomma}}
+                                <td data-title="Portfolio Current Investments" id="hidden_row2" class="hidden_row">{{sum_current_stocks_value|add:sum_recent_value.recent_value__sum|intcomma}}
+                                 <td data-title="Grand Total Results" id="hidden_row3" class="hidden_row">{{sum_current_stocks_value|sub:sum_of_initial_stock_value|add:sum_recent_value.recent_value__sum|sub:sum_acquired_value.acquired_value__sum|intcomma}}
                             </tr>
                             </tbody>
                         </table>
@@ -72,15 +72,15 @@
                             <tbody>
                             {% for stock in stocks %}
                                 <tr>
-                                    <td>{{ stock.customer }}</td>
-                                    <td>{{ stock.symbol }}</td>
-                                    <td>{{ stock.name }}</td>
-                                    <td>{{ stock.shares|intcomma }}</td>
-                                    <td>{{ stock.purchase_price|intcomma }}</td>
-                                    <td>{{ stock.initial_stock_value|intcomma}}</td>
-                                    <td>{{ stock.current_stock_price|intcomma}}
-                                    <td>{{ stock.current_stock_value|intcomma}}
-                                    <td>{{ stock.current_stock_value|sub:stock.initial_stock_value|intcomma}}
+                                    <td data-title="Customer" id="hidden_row4" class="hidden_row">{{ stock.customer }}</td>
+                                    <td data-title="Symbol" id="hidden_row5" class="hidden_row">{{ stock.symbol }}</td>
+                                    <td data-title="Name" id="hidden_row6" class="hidden_row">{{ stock.name }}</td>
+                                    <td data-title="Shares" id="hidden_row7" class="hidden_row">{{ stock.shares|intcomma }}</td>
+                                    <td data-title="Initial Stock Price" id="hidden_row8" class="hidden_row">{{ stock.purchase_price|intcomma }}</td>
+                                    <td data-title="Initial Stock Value" id="hidden_row10" class="hidden_row">{{ stock.initial_stock_value|intcomma}}</td>
+                                    <td data-title="Current Stock Price" id="hidden_row11" class="hidden_row">{{ stock.current_stock_price|intcomma}}
+                                    <td data-title="Current Stock Value" id="hidden_row12" class="hidden_row">{{ stock.current_stock_value|intcomma}}
+                                    <td data-title="Results" id="hidden_row13" class="hidden_row">{{ stock.current_stock_value|sub:stock.initial_stock_value|intcomma}}
 
                                 </tr>
                             {% endfor %}
@@ -96,9 +96,9 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <td>{{ sum_of_initial_stock_value}}</td>
-                                <td>{{ sum_current_stocks_value }}</td>
-                                <td>{{ sum_current_stocks_value|sub:sum_of_initial_stock_value|intcomma  }}</td>
+                                <td data-title="Total of Initial Stocks" id="hidden_row14" class="hidden_row">{{ sum_of_initial_stock_value}}</td>
+                                <td data-title="Total of Current Stocks" id="hidden_row15" class="hidden_row">{{ sum_current_stocks_value }}</td>
+                                <td data-title="Results" id="hidden_row16" class="hidden_row">{{ sum_current_stocks_value|sub:sum_of_initial_stock_value|intcomma  }}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -124,14 +124,14 @@
                             <tbody>
                             {% for investment in investments %}
                             <tr bgcolor="white">
-                                <td>{{ investment.customer }}</td>
-                                <td>{{ investment.category }}</td>
-                                <td>{{ investment.description }}</td>
-                                <td>{{ investment.acquired_value }}</td>
-                                <td>{{ investment.acquired_date }}</td>
-                                <td>{{ investment.recent_value }}</td>
-                                <td>{{ investment.recent_date }}</td>
-                                <td>{{ investment.recent_value|sub:investment.acquired_value|intcomma }}</td>
+                                <td data-title="Customer number" id="hidden_row17" class="hidden_row">{{ investment.customer }}</td>
+                                <td data-title="Category" id="hidden_row18" class="hidden_row">{{ investment.category }}</td>
+                                <td data-title="Description" id="hidden_row19" class="hidden_row">{{ investment.description }}</td>
+                                <td data-title="Acquired Value" id="hidden_row20" class="hidden_row">{{ investment.acquired_value }}</td>
+                                <td data-title="Acquired Date" id="hidden_row21" class="hidden_row">{{ investment.acquired_date }}</td>
+                                <td data-title="Recent Value" id="hidden_row22" class="hidden_row">{{ investment.recent_value }}</td>
+                                <td data-title="Recent Date" id="hidden_row23" class="hidden_row">{{ investment.recent_date }}</td>
+                                <td data-title="Results" id="hidden_row24" class="hidden_row">{{ investment.recent_value|sub:investment.acquired_value|intcomma }}</td>
                             </tr>
                             {% endfor %}
                             </tbody>
@@ -148,9 +148,9 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <td>{{ sum_acquired_value.acquired_value__sum }}</td>
-                                <td>{{ sum_recent_value.recent_value__sum }}</td>
-                                <td>{{ sum_recent_value.recent_value__sum|sub:sum_acquired_value.acquired_value__sum|intcomma }}</td>
+                                <td data-title="Total of Initial Investments" id="hidden_row25" class="hidden_row">{{ sum_acquired_value.acquired_value__sum }}</td>
+                                <td data-title="Total of Current Investments" id="hidden_row26" class="hidden_row">{{ sum_recent_value.recent_value__sum }}</td>
+                                <td data-title="Results" id="hidden_row27" class="hidden_row">{{ sum_recent_value.recent_value__sum|sub:sum_acquired_value.acquired_value__sum|intcomma }}</td>
                             </tr>
                             </tbody>
                         </table>
